Revision history for Business::Shipping
=======================================

1.56  (In source repository)


  General
  
    * [Fixed] "You tried to plan twice" error in t/16_Pod-Coverage.t
    
    * [Enh] Minor documentation updates

  Offline_UPS
  
    * [Fixed] Fuel surcharge auto-update bugs.
    
    * [Enh] Minor enhancements
      - [Enh] Preparation for the 2005 data.
      - [Enh] Data directory checks for ".this_is_data" file
      - [Enh] Check for missing columns while checking zone files
    
  Interchange Usertag
  
    * [Enh] Update usertag simulator test with recent usertag code.


1.55  Nov 22 2004

  General
  
    * Rewrite the 'service' parameter/function
      - User can specify full names such as 'Ground Residential' instead of
        GNDRES or 03.
      - Backwards-compatible
      - Allows easy retrieval of service names, codes, nicknames, etc.
      - Prepares the way for new UPS_Online 'Shop' service.
      
    * Rewrite the 'results' feature
      - Remove old 'packages' idea.
      - Make room for new UPS_Online 'Shop' service.
      - Not backwards-compatible, but results() was not intended to be public
        before.
    
    * Misc code cleanups
  
    * Remove some old utility functions.
    
    * [Fixed] Tests tried to load Cache::FileCache, even when the module was not 
      installed.  Now it tries to detect the module first.
    
    * [Fixed] Business::Shipping::RateRequest loaded Cache::FileCache even though
      it is not needed at that level anymore.
    
    * [Enh] Tests: check for username/password more consistently.
    
    * [Enh] Remove dependancy on updated version of Scalar::Util (now older 
      versions will work).
    
  UPS_Online
  
    * [Enh] New 'Shop' service.  Retrieve all the rates in one request.  Original 
      implementation by Selena Brewington <computers@chrisking.com>, later
      updated and modified. 
      - New tests added to cover the shop feature.
      - Example Usage:   
      